--- a/notebooks/bert_exploration.ipynb
+++ b/notebooks/bert_exploration.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import BertTokenizer, pipeline\n",
+    "from transformers import pipeline\n",
     "from image_to_poem.data.kaggle_poems import KagglePoems\n",
     "from sentence_transformers import SentenceTransformer, util\n",
     "from PIL import Image\n",
     "\n",
-    "DATA_PATH = '../../data/'"
+    "DATA_PATH = '../data/'"
    ]
   },
   {
@@ -21,21 +21,20 @@
    "outputs": [],
    "source": [
     "bert = SentenceTransformer('all-MiniLM-L6-v2')\n",
-    "clip = SentenceTransformer('clip-ViT-B-32')\n",
     "poems = KagglePoems(DATA_PATH + \"kaggle_poems\")\n",
     "img2text = pipeline(\"image-to-text\", model=\"nlpconnect/vit-gpt2-image-captioning\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'num_poems': 14364, 'num_words': 1611996, 'vocab_size': 122909, 'avg_poem_length': 112.22472848788638} \n",
+      "{'num_poems': 14364, 'num_words': 2261467, 'vocab_size': 156069, 'avg_poem_length': 157.43991924255081} \n",
       "\n",
       "selecting three poems:\n",
       "\n",
@@ -147,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -164,30 +163,30 @@
      "text": [
       "\n",
       "Generated text description:\n",
-      " a row of boats sitting on a dock \n"
+      " a crowd of people watching a soccer game \n"
      ]
     }
    ],
    "source": [
     "# get image description \n",
-    "desc = img2text(DATA_PATH + \"poem_images/3.jpg\")\n",
-    "# desc = img2text(\"https://images.theconversation.com/files/551467/original/file-20231002-21-7s6vkv.jpg?ixlib=rb-1.1.0&rect=11%2C23%2C3982%2C2790&q=20&auto=format&w=320&fit=clip&dpr=2&usm=12&cs=strip\")\n",
+    "# desc = img2text(DATA_PATH + \"poem_images/3.jpg\")\n",
+    "desc = img2text(\"https://img.olympics.com/images/image/private/t_s_pog_staticContent_hero_lg_2x/f_auto/primary/sv4zhez2lyydydg8a4tb\")\n",
     "desc = desc[0][\"generated_text\"]\n",
     "print(\"\\nGenerated text description:\\n\", desc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "poem 0 has similarity: 0.12742985785007477\n",
-      "poem 1 has similarity: 0.019252631813287735\n",
-      "poem 2 has similarity: 0.05729397386312485\n"
+      "poem 0 has similarity: 0.06547113507986069\n",
+      "poem 1 has similarity: 0.4520055055618286\n",
+      "poem 2 has similarity: -0.030029242858290672\n"
      ]
     }
    ],
@@ -200,56 +199,6 @@
     "for i in range(len(similarities)):\n",
     "    print(f\"poem {i} has similarity: {similarities[i][0]}\")\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.12742986, 0.01925263, 0.05729397], dtype=float32)"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sims = np.array(similarities).flatten()\n",
-    "sims"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.argmax(sims)"
    ]
   }
  ],
