--- a/notebooks/gpt2_tutorial.ipynb
+++ b/notebooks/gpt2_tutorial.ipynb
@@ -101,7 +101,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading poems:  15%|█▍        | 2096/14331 [00:00<00:01, 6531.88it/s]"
+      "Reading poems:  12%|█▏        | 1734/14331 [00:02<00:22, 564.93it/s]"
      ]
     },
     {
@@ -116,7 +116,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading poems:  76%|███████▋  | 10961/14331 [00:01<00:00, 6673.43it/s]"
+      "Reading poems:  71%|███████   | 10169/14331 [00:10<00:01, 2523.02it/s]"
      ]
     },
     {
@@ -130,7 +130,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading poems: 100%|██████████| 14331/14331 [00:02<00:00, 6052.04it/s]\n"
+      "Reading poems: 100%|██████████| 14331/14331 [00:14<00:00, 957.04it/s] \n"
      ]
     }
    ],
@@ -306,7 +306,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\lukas\\miniconda3\\envs\\nlp_venv\\lib\\site-packages\\transformers\\optimization.py:411: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
+      "C:\\Users\\lukas\\AppData\\Roaming\\Python\\Python310\\site-packages\\transformers\\optimization.py:411: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
       "  warnings.warn(\n"
      ]
     }
@@ -351,30 +351,27 @@
      "output_type": "stream",
      "text": [
       "Beginning epoch 1 of 4\n",
-      "Average Training Loss: 47.53901878992716. Epoch time: 0:00:22\n",
+      "Average Training Loss: 47.53901878992716. Epoch time: 0:00:06\n",
       "\n",
-      "Validation loss: 21.39034652709961. Validation Time: 0:00:01\n",
-      "\n",
-      "------------------------------\n",
-      "Beginning epoch 2 of 4\n",
-      "Average Training Loss: 6.725579857826233. Epoch time: 0:00:21\n",
-      "\n",
-      "Validation loss: 4.6801183223724365. Validation Time: 0:00:01\n",
+      "Validation loss: 21.39034652709961. Validation Time: 0:00:00\n",
       "\n",
       "------------------------------\n",
-      "Beginning epoch 3 of 4\n",
-      "Average Training Loss: 5.413493951161702. Epoch time: 0:00:21\n",
-      "\n",
-      "Validation loss: 3.884183168411255. Validation Time: 0:00:01\n",
-      "\n",
-      "------------------------------\n",
-      "Beginning epoch 4 of 4\n",
-      "Average Training Loss: 4.5850134293238325. Epoch time: 0:00:21\n",
-      "\n",
-      "Validation loss: 3.448719024658203. Validation Time: 0:00:01\n",
-      "\n",
-      "------------------------------\n",
-      "Total training took 0:01:30\n"
+      "Beginning epoch 2 of 4\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\lukas\\Git\\Studie\\CS4120-NLP\\image-to-poem\\notebooks\\gpt2_tutorial.ipynb Cell 20\u001b[0m line \u001b[0;36m5\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/lukas/Git/Studie/CS4120-NLP/image-to-poem/notebooks/gpt2_tutorial.ipynb#X25sZmlsZQ%3D%3D?line=50'>51</a>\u001b[0m     model\u001b[39m.\u001b[39mtrain()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/lukas/Git/Studie/CS4120-NLP/image-to-poem/notebooks/gpt2_tutorial.ipynb#X25sZmlsZQ%3D%3D?line=52'>53</a>\u001b[0m   loss\u001b[39m.\u001b[39mbackward()\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/lukas/Git/Studie/CS4120-NLP/image-to-poem/notebooks/gpt2_tutorial.ipynb#X25sZmlsZQ%3D%3D?line=53'>54</a>\u001b[0m   optimizer\u001b[39m.\u001b[39;49mstep()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/lukas/Git/Studie/CS4120-NLP/image-to-poem/notebooks/gpt2_tutorial.ipynb#X25sZmlsZQ%3D%3D?line=54'>55</a>\u001b[0m   scheduler\u001b[39m.\u001b[39mstep()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/lukas/Git/Studie/CS4120-NLP/image-to-poem/notebooks/gpt2_tutorial.ipynb#X25sZmlsZQ%3D%3D?line=56'>57</a>\u001b[0m avg_train_loss \u001b[39m=\u001b[39m total_train_loss \u001b[39m/\u001b[39m \u001b[39mlen\u001b[39m(train_dataloader)\n",
+      "File \u001b[1;32mc:\\Users\\lukas\\miniconda3\\envs\\nlp_venv\\lib\\site-packages\\torch\\optim\\lr_scheduler.py:68\u001b[0m, in \u001b[0;36mLRScheduler.__init__.<locals>.with_counter.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     66\u001b[0m instance\u001b[39m.\u001b[39m_step_count \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     67\u001b[0m wrapped \u001b[39m=\u001b[39m func\u001b[39m.\u001b[39m\u001b[39m__get__\u001b[39m(instance, \u001b[39mcls\u001b[39m)\n\u001b[1;32m---> 68\u001b[0m \u001b[39mreturn\u001b[39;00m wrapped(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32mc:\\Users\\lukas\\miniconda3\\envs\\nlp_venv\\lib\\site-packages\\torch\\optim\\optimizer.py:373\u001b[0m, in \u001b[0;36mOptimizer.profile_hook_step.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    368\u001b[0m         \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    369\u001b[0m             \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\n\u001b[0;32m    370\u001b[0m                 \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mfunc\u001b[39m}\u001b[39;00m\u001b[39m must return None or a tuple of (new_args, new_kwargs), but got \u001b[39m\u001b[39m{\u001b[39;00mresult\u001b[39m}\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    371\u001b[0m             )\n\u001b[1;32m--> 373\u001b[0m out \u001b[39m=\u001b[39m func(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m    374\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_optimizer_step_code()\n\u001b[0;32m    376\u001b[0m \u001b[39m# call optimizer step post hooks\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\lukas\\miniconda3\\envs\\nlp_venv\\lib\\site-packages\\torch\\utils\\_contextlib.py:115\u001b[0m, in \u001b[0;36mcontext_decorator.<locals>.decorate_context\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    112\u001b[0m \u001b[39m@functools\u001b[39m\u001b[39m.\u001b[39mwraps(func)\n\u001b[0;32m    113\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdecorate_context\u001b[39m(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[0;32m    114\u001b[0m     \u001b[39mwith\u001b[39;00m ctx_factory():\n\u001b[1;32m--> 115\u001b[0m         \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\transformers\\optimization.py:467\u001b[0m, in \u001b[0;36mAdamW.step\u001b[1;34m(self, closure)\u001b[0m\n\u001b[0;32m    464\u001b[0m \u001b[39m# Decay the first and second moment running average coefficient\u001b[39;00m\n\u001b[0;32m    465\u001b[0m \u001b[39m# In-place operations to update the averages at the same time\u001b[39;00m\n\u001b[0;32m    466\u001b[0m exp_avg\u001b[39m.\u001b[39mmul_(beta1)\u001b[39m.\u001b[39madd_(grad, alpha\u001b[39m=\u001b[39m(\u001b[39m1.0\u001b[39m \u001b[39m-\u001b[39m beta1))\n\u001b[1;32m--> 467\u001b[0m exp_avg_sq\u001b[39m.\u001b[39;49mmul_(beta2)\u001b[39m.\u001b[39;49maddcmul_(grad, grad, value\u001b[39m=\u001b[39;49m\u001b[39m1.0\u001b[39;49m \u001b[39m-\u001b[39;49m beta2)\n\u001b[0;32m    468\u001b[0m denom \u001b[39m=\u001b[39m exp_avg_sq\u001b[39m.\u001b[39msqrt()\u001b[39m.\u001b[39madd_(group[\u001b[39m\"\u001b[39m\u001b[39meps\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[0;32m    470\u001b[0m step_size \u001b[39m=\u001b[39m group[\u001b[39m\"\u001b[39m\u001b[39mlr\u001b[39m\u001b[39m\"\u001b[39m]\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -491,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -862,6 +859,26 @@
     "# model = GPT2LMHeadModel.from_pretrained(\"prajwalcr/poetry-joy_gpt2\")\n",
     "# tokenizer = GPT2Tokenizer.from_pretrained(\"prajwalcr/poetry-joy_gpt2\")\n",
     "model.to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'20231123_184255'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import datetime \n"
    ]
   }
  ],
