--- a/notebooks/model_exploration.ipynb
+++ b/notebooks/model_exploration.ipynb
@@ -354,6 +354,97 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Similarity model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------Poem 1----------\n",
+      ",\n",
+      "Which you can't see, but smell and smell;\n",
+      "Your eyes are not blinded by those green grass;\n",
+      "The colour of your eyes, is what is most dear\n",
+      "To you, when your eyes are\n",
+      "\n",
+      "----------Poem 2----------\n",
+      ",\n",
+      "The sun is a joy to our children;\n",
+      "The trees are a garden to them,\n",
+      "The sky a colorful sky.\n",
+      "To my children it is so beautiful,\n",
+      "To my love they are full of\n",
+      "\n",
+      "----------Poem 3----------\n",
+      "\n",
+      "near me\n",
+      "when we are alone\n",
+      "and i am alone\n",
+      "and when we have talked\n",
+      "one evening\n",
+      "i am happy\n",
+      "but i don’t remember\n",
+      "which time\n",
+      "we were sitting by the fire\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from image_to_poem.language_model.gpt2 import GPT2Model\n",
+    "\n",
+    "model_dir = \"models/language_models/max_len-500/model/\"\n",
+    "model = GPT2Model(model_dir)\n",
+    "prompt = \"some lovely flowers in a field\"\n",
+    "poems = model.generate(prompt = prompt, num_return_sequences=3, max_length=50)\n",
+    "\n",
+    "for i, poem in enumerate(poems):\n",
+    "    print(\"-\"*10 + f\"Poem {i+1}\" + \"-\"*10)\n",
+    "    print(poem)\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8020926117897034\n",
+      "0.7550157308578491\n",
+      "0.5642459988594055\n"
+     ]
+    }
+   ],
+   "source": [
+    "from image_to_poem.similarity.similarity_scoring import BertSimilarityModel\n",
+    "\n",
+    "sim_model = BertSimilarityModel.from_model_dir(\"models/similarity/model_20231129_221129\")\n",
+    "\n",
+    "for poem in poems:\n",
+    "    print(sim_model.similarity(prompt, poem))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Poem generator"
    ]
   },
